# internal/models/models.go
@@ -14,7 +14,7 @@ type Base struct {
 	CreatedBy string         `json:"created_by"`
 	CreatedAt time.Time      `json:"created_at"`
 	UpdatedAt time.Time      `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `json:"deleted_at" gorm:"index"`
+	DeletedAt gorm.DeletedAt `json:"deleted_at" gorm:"index" swaggertype:"string"`
 }
 
 func (b *Base) BeforeCreate(tx *gorm.DB) error {
